infra/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: music-catalog-ingress
  namespace: music-catalog
spec:
  ingressClassName: nginx
  rules:
    - host: music-catalog.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 80
